Make sure badges have a text-bg- class.

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -16,7 +16,7 @@
 			<small class="text-body-secondary">
 				/ {{ exercise.max_points }}
 				{% if summary.get_penalty %}
-				<span class="badge">
+				<span class="badge text-bg-secondary">
 					{% translate "LATE" %} -{{ summary.get_penalty|percent }} %
 				</span>
 				{% endif %}
