--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -14,7 +14,7 @@
 
 			<dt>{% translate "STATUS" %}</dt>
 			<dd>
-				<span class="badge text-bg-{% if submission.is_graded %}success{% else %}default{% endif %}">
+				<span class="badge rounded-pill text-bg-{% if submission.is_graded %}success{% else %}default{% endif %}">
 					{{ submission.status|submission_status }}
 				</span>
 			</dd>
