--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -1,13 +1,13 @@
 {% load i18n %}
 {% load exercise %}
 {% if submission_status %}
-<span class="badge">
+<span class="badge text-bg-secondary rounded-pill">
     {{ submission_status|submission_status }}
 </span>
 
 {% elif confirm_the_level %}
 {% if submitted %}
-<span class="badge{% if graded and official %} badge-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}{% endif %} {{ classes }}">
+<span class="badge rounded-pill {% if graded and official %} text-bg-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}{% endif %} {{ classes }}">
   {% if not official %}
     {% if unofficial_submission_type == 'limit_exceeded' %}
       {% translate "LIMIT_EXCEEDED" %}
@@ -25,11 +25,11 @@
   {% endif %}
 </span>
 {% elif confirmable_points %}
-<span class="badge badge-danger" data-bs-toggle="tooltip" title="{% translate 'CONFIRMABLE_POINTS_DESCRIPTION' %}">
+<span class="badge text-bg-secondary rounded-pill text-bg-danger" data-bs-toggle="tooltip" title="{% translate 'CONFIRMABLE_POINTS_DESCRIPTION' %}">
   {% translate "MISSING" %}
 </span>
 {% elif exercise_page %}
-<span class="badge">
+<span class="badge text-bg-secondary rounded-pill">
   {% translate "NOT_SUBMITTED" %}
 </span>
 {% endif %}
@@ -38,7 +38,7 @@
 {% if difficulty %}
 <span class="difficulty">{{ difficulty }}</span>
 {% endif %}
-<span class="badge{% if submitted and official %} {% if feedback_revealed %}{% if full_score %}badge-success{% elif passed %}badge-warning{% else %}badge-danger{% endif %}{% endif %}{% if unconfirmed %} unconfirmed-points{% endif %}{% endif %}{% if classes %} {{ classes }}{% elif show_zero_points_immediately and best_submission_true_points == 0 %}badge-danger{% endif %}"
+<span class="badge rounded-pill {% if submitted and official %} {% if feedback_revealed %}{% if full_score %}text-bg-success{% elif passed %}text-bg-warning{% else %}text-bg-danger{% endif %}{% endif %}{% if unconfirmed %} unconfirmed-points{% endif %}{% endif %}{% if classes %} {{ classes }}{% elif show_zero_points_immediately and best_submission_true_points == 0 %}text-bg-danger{% endif %}"
         data-bs-toggle="tooltip" data-placement="bottom"
         title="{% if not feedback_revealed %}{{ feedback_hidden_description }}{% elif not official %}{% if unofficial_submission_type == 'limit_exceeded' %}{% translate 'LIMIT_EXCEEDED' %}{% elif unofficial_submission_type == 'deadline_passed' %}{% translate 'DEADLINE_PASSED' %}{% else %}{% translate 'UNOFFICIAL_DESCRIPTION' %}{% endif %}{% elif passed %}{% if required > 0 %}{% translate 'PASSED' %}{% endif %}{% elif missing_points %}{% blocktranslate trimmed with points=required %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}{% elif submitted %}{% translate 'REQUIRED_EXERCISES_NOT_PASSED' %}{% endif %}">
         {% if show_zero_points_immediately and best_submission_true_points == 0 %}
