--- a/assets/sass/components/_badge.scss
+++ b/assets/sass/components/_badge.scss
@@ -1,4 +1,4 @@
-@import "../mixins/badge";
+/*@import "../mixins/badge";
 
 .badge {
 	@include badge-color($aplus-default-status-bg, #fff, #000);
@@ -16,3 +16,4 @@
 		@include badge-color($aplus-info-status-bg, #fff, #000);
 	}
 }
+*/
