--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -81,7 +81,7 @@
 					</span>
 					<br>
 					{% for tag in tags %}
-					<button class="btn btn-light btn-sm tag-button" style="background-color:{{ tag.color }};color:{{ tag.font_color }};" data-tag-slug="{{ tag.slug }}" data-tag-name="{{ tag.name }}">
+					<button class="btn btn-sm tag-button" style="background-color:{{ tag.color }};color:{{ tag.font_color }};" data-tag-slug="{{ tag.slug }}" data-tag-name="{{ tag.name }}">
 						<i class="bi-square" aria-hidden="true"></i>
 						{{ tag.name }}
 					</button>
