--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -152,7 +152,7 @@
 		</section>
 
 		<div class="col-sm-1">
-			<button class="btn btn-light show-extra-login-btn"
+			<button class="btn show-extra-login-btn"
 				aria-label="{% translate 'SHOW_MORE_LOGIN_OPTIONS' %}"
 				title="{% translate 'SHOW_MORE_LOGIN_OPTIONS' %}"
 			>
