--- a/assets/sass/components/_progress-bar.scss
+++ b/assets/sass/components/_progress-bar.scss
@@ -1,6 +1,6 @@
 .aplus-progress-bar             { @extend .progress-bar; }
 .aplus-progress-bar-striped     { @extend .progress-bar-striped; }
-.aplus-progress-bar-success     { @extend .progress-bar-success !optional; }
-.aplus-progress-bar-info        { @extend .progress-bar-info !optional; }
-.aplus-progress-bar-warning     { @extend .progress-bar-warning !optional; }
-.aplus-progress-bar-danger      { @extend .progress-bar-danger !optional; }
+.aplus-progress-bar-success     { @extend .bg-success !optional; }
+.aplus-progress-bar-info        { @extend .bg-info !optional; }
+.aplus-progress-bar-warning     { @extend .bg-warning !optional; }
+.aplus-progress-bar-danger      { @extend .bg-danger !optional; }
