--- a/diploma/templates/diploma/_diploma_button.html
+++ b/diploma/templates/diploma/_diploma_button.html
@@ -3,7 +3,7 @@
 <form method="post" action="{{ url }}">
   {% csrf_token %}
   <p>
-    <button{% if grade == 0 %} disabled="yes"{% endif %} class="btn btn-light">
+    <button{% if grade == 0 %} disabled="yes"{% endif %} class="btn btn-secondary">
       {% blocktranslate trimmed %}GET_COURSE_DIPLOMA{% endblocktranslate %}
     </button>
     {% if grade == 0 and is_course_staff %}
