--- a/assets/sass/components/_frontpage-cards.scss
+++ b/assets/sass/components/_frontpage-cards.scss
@@ -5,7 +5,7 @@
 		margin: 1%;
 		margin-top: 30px;
 		> .section-heading {
-			border-bottom: solid 1px #eee;
+			border-bottom: solid 1px var(--bs-border-color, #eee);
 			display: flex;
 			justify-content: space-between;
 			padding-left: 10px;
@@ -39,8 +39,8 @@
 		display: flex;
 		flex-direction: column;
 		width: 400px;
-		border: solid 1px #ccc;
-		border-radius: 4px;
+		/*border: solid 1px #ccc;
+		border-radius: 4px;*/
 		margin: 8px;
 		margin-bottom: 20px;
 		padding: 4px;
@@ -82,20 +82,21 @@
 	}
 	.advert-card {
 		position: relative;
-		background-color: #d9edf7;
-		border-color: #bce8f1;
+		background-color: var(--bs-info-bg-subtle, #d9edf7);
+		border-color: var(--bs-card-border-color, #bce8f1);
 		&:hover {
-			h3 {
+			filter: brightness(85%);
+			/*h3 {
 				color: #333;
 			}
 			p {
 				color: #333;
-			}
+			}*/
 		}
 		> a > i.icon.bi-box-arrow-up-right {
 			position: absolute;
 			top: 92%;
-			left: 92%;
+			left: 90%;
 		}
 	}
 	a {
@@ -107,19 +108,19 @@
 		flex-grow: 1;
 		&:hover {
 			filter: brightness(85%);
-			h3 {
+			/*h3 {
 				color: #333;
 			}
 			p {
 				color: #333;
-			}
+			}*/
 		}
 	}
 	.card-img-top {
 		object-fit: cover;
 		width: 100%;
 		height: 145px;
-		background-color: #eeeeee;
+		background-color: var(--bs-secondary-bg, #eeeeee);
 	}
 	.advert-image {
 		position: relative;
@@ -132,7 +133,7 @@
 	}
 	.course-image {
 		position: relative;
-		color: #fff;
+		color: var(--bs-secondary, #fff);
 		i {
 			font-size: 90px;
 			position: absolute;
@@ -143,12 +144,13 @@
 	.card-body {
 		padding: 10px;
 		padding-top: 0px;
-		color: #333333;
+		/*color: #333333;*/
 	}
 	.card-title {
-		color: #337ab7;
+		color: var(--bs-card-title-color, #337ab7);
 	}
 	.card-subtitle {
+		color: var(--bs-secondary-color, #333);
 		font-size: 18px;
 	}
 	.card-footer {
