Improve performance of "All submissions" view
Limit the table rows to 50 by default and fetch exercise objects
in the same query with the submissions. Pagination should be added
to the page later.

Part of #1448

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -239,7 +239,7 @@
 	</a>
 </li>
 <li class="menu-all-submissions">
-	<a href="{{ instance|url:'all-submissions' }}">
+	<a href="{{ instance|url:'all-submissions' }}?limited=true">
 		<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 		{% translate "ALL_SUBMISSIONS" %}
 	</a>
