--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -371,3 +371,8 @@ collapsed due to narrow viewport) */
 table.results-table .category-row {
     font-weight: bold;
 }
+
+div.rst-tabs div.html-box {
+	padding: 1em;
+    border: 1px solid var(--bs-border-color, #dee2e6);
+}
