--- a/course/templates/course/staff/all_submissions_table.html
+++ b/course/templates/course/staff/all_submissions_table.html
@@ -53,63 +53,63 @@
 					<th>{% translate "TAGS" %}</th>
 
 					<th
-						data-filter-type="options"
-						data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
-						data-order-disable="true"
+					data-filter-type="options"
+					data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
+					data-order-disable="true"
 					>
-						{% translate "ASSESSED_MANUALLY" %}
-					</th>
-					<th data-filter-type="none" data-order-disable="true">{% translate "INSPECT" %}</th>
-					<th>{% translate "EXERCISE" %}</th>
-				</tr>
+					{% translate "ASSESSED_MANUALLY" %}
+				</th>
+				<th data-filter-type="none" data-order-disable="true">{% translate "INSPECT" %}</th>
+				<th>{% translate "EXERCISE" %}</th>
+			</tr>
 		</thead>
 		<tbody>
 			{% for summary in submission_data %}
 			<tr id="summary.submission-{{ summary.submission.id }}">
-					<td>
-						{% profiles summary.submitters instance summary.is_teacher %}
-					</td>
-					<td data-datetime="{{ summary.submission.submission_time|date:'Y-m-d H:i:s' }}">
-							{{ summary.submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
-							{% if summary.submission.late_penalty_applied %}
-							<span class="label label-warning">
-									{% blocktranslate trimmed with percent=summary.submission.late_penalty_applied|percent %}
-										LATE_W_PENALTY -- {{ percent }}
-									{% endblocktranslate %}
-							</span>
-							{% endif %}
-					</td>
-					<td>
-						{{ summary.submission.status|submission_status }}
-					</td>
-					<td>
-						{% format_points summary.submission.grade True True %}
-					</td>
-					<td id="submission_tags">
-						{% for tagging in summary.submission.submission_taggings.all %}
-							{{ tagging.tag|colortag }}
-						{% endfor %}
-					</td>
-					<td>
-						{% if summary.submission.grader %}
-								<span class="glyphicon glyphicon-ok"></span>
-								{% translate "YES" %}
-						{% else %}
-								<span class="glyphicon glyphicon-remove"></span>
-								{% translate "NO" %}
-						{% endif %}
-					</td>
-					<td>
-						<a href="{{ summary.submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--xs">
-							<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
-							{% translate "INSPECT" %}
-						</a>
-					</td>
-					<td>
-						<a href="{{ summary.exercise|url }}">
-							{{ summary.exercise | parse_localization }}
-						</a>
-					</td>
+				<td>
+					{% profiles summary.submission.submitters.all instance summary.is_teacher %}
+				</td>
+				<td data-datetime="{{ summary.submission.submission_time|date:'Y-m-d H:i:s' }}">
+					{{ summary.submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
+					{% if summary.submission.late_penalty_applied %}
+					<span class="label label-warning">
+						{% blocktranslate trimmed with percent=summary.submission.late_penalty_applied|percent %}
+						LATE_W_PENALTY -- {{ percent }}
+						{% endblocktranslate %}
+					</span>
+					{% endif %}
+				</td>
+				<td>
+					{{ summary.submission.status|submission_status }}
+				</td>
+				<td>
+					{% format_points summary.submission.grade True True %}
+				</td>
+				<td id="submission_tags">
+					{% for tagging in summary.submission.submission_taggings.all %}
+					{{ tagging.tag|colortag }}
+					{% endfor %}
+				</td>
+				<td>
+					{% if summary.submission.grader %}
+					<span class="glyphicon glyphicon-ok"></span>
+					{% translate "YES" %}
+					{% else %}
+					<span class="glyphicon glyphicon-remove"></span>
+					{% translate "NO" %}
+					{% endif %}
+				</td>
+				<td>
+				<a href="{{ summary.submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--xs">
+					<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+					{% translate "INSPECT" %}
+				</a>
+				</td>
+				<td>
+					<a href="{{ summary.exercise|url }}">
+						{{ summary.exercise | parse_localization }}
+					</a>
+				</td>
 			</tr>
 			{% empty %}
 			<tr>
